--- a/_posts/2025-02-18-test.md
+++ b/_posts/2025-02-18-test.md
@@ -5,4 +5,6 @@ categories: []
 tags: []     # TAG names should always be lowercase
 description: 
 ---
+
+<script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
 $a\leq b$
